# taskly

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
infra/: Makefile.ci  docker-compose.ci.yml  docker-compose.prod.yml  docker-compose.yml
infra/docker/: gateway.Dockerfile  gateway.dockerignore  users.Dockerfile
infra/docker/db/: init.sql
infra/nginx/: default.conf
services/gateway/: Makefile  README.md  entrypoint.sh  pyproject.toml
services/gateway/src/app/: main.py
services/gateway/src/app/api/v1/: router.py
services/gateway/src/app/api/v1/endpoints/: auth.py  tasks.py
services/gateway/src/app/core/: config.py  rate_limiter.py  security.py
services/gateway/tests/: test_auth.py  test_full_auth_flow.py
services/tasks/: Makefile  README.md  entrypoint.sh  pyproject.toml
services/tasks/apps/tasks/api/v1/: urls.py
services/tasks/apps/tasks/api/v1/serializers/: __init__.py  task.py
services/tasks/apps/tasks/api/v1/views/: __init__.py  task.py
services/tasks/apps/tasks/application/services/: __init__.py  task.py
services/tasks/apps/tasks/domain/entities/: __init__.py  task.py
services/tasks/apps/tasks/domain/exceptions/: __init__.py  task.py
services/tasks/apps/tasks/domain/repositories/: __init__.py  task.py
services/tasks/apps/tasks/infrastructure/: auth.py
services/tasks/apps/tasks/infrastructure/models/: __init__.py  task.py
services/tasks/apps/tasks/infrastructure/repositories/: __init__.py  task.py
services/tasks/apps/tasks/migrations/: 0001_initial.py
services/tasks/apps/tasks/tests/: conftest.py  test_api.py  test_application.py  test_domain.py
services/tasks/config/: settings.py  urls.py
services/users/: .gitignore  Makefile  README.md  entrypoint.sh  pyproject.toml
services/users/apps/accounts/: models.py
services/users/apps/accounts/api/v1/: urls.py
services/users/apps/accounts/api/v1/serializers/: __init__.py  register.py
services/users/apps/accounts/api/v1/views/: __init__.py  register.py
services/users/apps/accounts/infrastructure/models/: user.py
services/users/apps/accounts/migrations/: 0001_initial.py
services/users/apps/accounts/tests/: test_auth.py
services/users/config/: settings.py  urls.py
